<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Demo.activities.MainMenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/icon1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="left"
            android:layout_margin="15dp"
            android:adjustViewBounds="false"
            android:background="@drawable/tukl"
            android:cropToPadding="false" />

        <ImageView
            android:id="@+id/icon2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:adjustViewBounds="false"
            android:layout_gravity="right"
            android:background="@drawable/hci"
            android:cropToPadding="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btn_add_user"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text= "@string/btn_add_user"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_train_model"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text= "@string/btn_train_model"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_test_auth"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text= "@string/btn_test_auth"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"/>


    </LinearLayout>


</LinearLayout>