<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gestureTestLayout"
    android:orientation="vertical"
    tools:context=".Demo.activities.TestModelActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Spinner
            android:id="@+id/spinnerTestUsers"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        </Spinner>

        <Spinner
            android:id="@+id/spinnerModel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        </Spinner>

        <Switch
            android:id="@+id/recordSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monitor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mlPaintLayout"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="returnToMain"
            android:text="@string/btn_ok" />

        <Button
            android:id="@+id/mlbtnTest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickAuth"
            android:text="@string/btn_test" />
    </LinearLayout>

</LinearLayout>