<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".Demo.activities.AddNewUserActivity">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_margin="20dp"
        android:background="@drawable/add_user_256"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/lblUserID"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="left"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/lblUserID"/>

        <EditText
            android:id="@+id/txtUserID"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_gravity="right"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/lblFirstName"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="left"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/lblFirstName"/>

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_gravity="right"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/lblLastName"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/lblLastName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_gravity="right"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp">

        <Button
            android:id="@+id/btn_add_user_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveNewUser"
            android:text="@string/btn_ok"/>
    </LinearLayout>


</LinearLayout>